--- a/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
@@ -78,7 +78,7 @@
                 <DataTemplate>
                     <Button Background="{x:Null}" Style="{StaticResource ListSelect}"
                                 BorderThickness="0"
-                                Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcEditHero}}}"
+                                Command="{Binding DataContext.DisplayHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcEditHero}}}"
                                 CommandParameter="{Binding .}">
                         <TextBlock Text="{Binding  Name}" HorizontalAlignment="Center" 
                                            VerticalAlignment="Bottom"  TextAlignment="Center" 
@@ -92,7 +92,8 @@
         <!--ADD MOVIE BUTTON-->
         <Button  Grid.Row="2" Grid.Column="0" Content="ADD HERO" Foreground="White" 
                         FontWeight="Bold" Background="#FF00C3EE" Margin="10"
-                        Style="{StaticResource ButtonHome}"/>
+                        Style="{StaticResource ButtonHome}"
+                        Command="{Binding HeroReset}"/>
 
         <!--RIGHT PART-->
         <UniformGrid Grid.Row="0" Grid.Column="1" Rows="14" Margin="50,0">
@@ -115,7 +116,7 @@
 
             <TextBlock Text="Description :" 
                                Style="{StaticResource MovieTextBlock}" />
-            <TextBox  Text="{Binding Desc,Mode=TwoWay}"
+            <TextBox  Text="{Binding Description,Mode=TwoWay}"
                      Style="{StaticResource MovieTextBox}"  />
 
             <TextBlock Text="Status :" 
@@ -162,10 +163,12 @@
         <UniformGrid Columns="2" Rows="1" Grid.Column="1" Grid.Row="1">
             <Button  Grid.Row="2" Grid.Column="1" Content="DELETE HERO" Foreground="White" 
                         FontWeight="Bold" Background="#FFEE2000" Margin="130,10"
-                        Style="{StaticResource ButtonHome}" />
+                        Style="{StaticResource ButtonHome}" 
+                     Command="{Binding DeleteHeroCommand}"/>
             <Button  Grid.Row="2" Grid.Column="1" Content="VALIDATE" Foreground="White" 
                         FontWeight="Bold" Background="#FF00EE82" Margin="130,10"
-                        Style="{StaticResource ButtonHome}" />
+                        Style="{StaticResource ButtonHome}" 
+                        Command="{Binding ValidateCommand}"/>
 
         </UniformGrid>
     </Grid>
