MAJOR - Finish linking admin pannel/manager
Refactoring SORTING List (handlling in VM)
Added/Fixed sorting in ListHeros/Movies + per heros/movies
Added sorting to AdminPannel
+ Add/Update/Remove hero/Movie
AutoSort ^
Fixed bug in Movie
Fixed ListView not linked to user hero fav/film fav (profile)
Added DB scripts
Update ISearchable Interface (Sort/Remove/Add)
Added Listfav to User
Commented All code (Admin pannel/Manager)

Various change - Everything working
TODO : DBMovie.json

--- a/src/MarvelFlow/MarvelFlow.App/Views/UcEditFilm.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcEditFilm.xaml
@@ -96,7 +96,7 @@
         <Button  Grid.Row="2" Grid.Column="0" Content="ADD FILM" Foreground="White" 
                         FontWeight="Bold" Background="#FF00C3EE" Margin="10"
                         Style="{StaticResource ButtonHome}"
-                        Command="{Binding FilmReset}"/>
+                        Command="{Binding FilmResetCommand}"/>
 
         <!--RIGHT PART-->
         <UniformGrid Grid.Row="0" Grid.Column="1" Rows="18" Margin="50,0">
