--- a/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
@@ -71,7 +71,7 @@
                     </ComboBox>
 
                     <!--INFOS DU PROFIL-->
-                    <UniformGrid Rows="4" Columns="2">
+                    <UniformGrid Rows="4" Columns="2" >
                         <TextBlock Text="Nom :" Foreground="#FFFFDC00" FontStyle="Italic" FontSize="20"/>
                         <TextBlock Text="{Binding CurrentUser.Nom}" Foreground="White" 
                                FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -91,7 +91,7 @@
 
                     <Button Background="DarkRed" Foreground="White" FontWeight="Bold" 
                             BorderThickness="2" BorderBrush="White"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Center"
+                            VerticalAlignment="Center" HorizontalAlignment="Center"
                             Style="{StaticResource OtherButton}"
                             Command="{Binding DeconnexionCommand}" Content="DECONNEXION" Height="46" Width="177" RenderTransformOrigin="0.525,1.37">
                     </Button>
@@ -104,7 +104,7 @@
             <TextBlock Text="Hero Favoris :" FontSize="30" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center"
                        Grid.Column="0"/>
-            <ListView ItemsSource="{Binding ListMoviesView}" x:Name="ListViewHeroFav" 
+            <ListView ItemsSource="{Binding ListHeroesView}" x:Name="ListViewHeroFav" 
                       HorizontalAlignment="Stretch" VerticalAlignment="Top" 
                       Grid.Column="0" Background="{x:Null}" BorderThickness="0" >
                 <ItemsControl.ItemsPanel>
