--- a/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
@@ -93,7 +93,7 @@
         <Button  Grid.Row="2" Grid.Column="0" Content="ADD HERO" Foreground="White" 
                         FontWeight="Bold" Background="#FF00C3EE" Margin="10"
                         Style="{StaticResource ButtonHome}"
-                        Command="{Binding HeroReset}"/>
+                        Command="{Binding HeroResetCommand}"/>
 
         <!--RIGHT PART-->
         <UniformGrid Grid.Row="0" Grid.Column="1" Rows="14" Margin="50,0">
@@ -162,8 +162,8 @@
 
         <UniformGrid Columns="2" Rows="1" Grid.Column="1" Grid.Row="1">
             <Button  Grid.Row="2" Grid.Column="1" Content="DELETE HERO" Foreground="White" 
-                        FontWeight="Bold" Background="#FFEE2000" Margin="130,10"
-                        Style="{StaticResource ButtonHome}" 
+                     FontWeight="Bold" Background="#FFEE2000" Margin="130,10"
+                     Style="{StaticResource ButtonHome}" 
                      Command="{Binding DeleteHeroCommand}"/>
             <Button  Grid.Row="2" Grid.Column="1" Content="VALIDATE" Foreground="White" 
                         FontWeight="Bold" Background="#FF00EE82" Margin="130,10"
