--- a/src/MarvelFlow/MarvelFlow.App/Views/UcFilm.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcFilm.xaml
@@ -66,7 +66,7 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Hero.Desc}" 
+                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Movie.Desc}" 
                            TextWrapping="Wrap" FontSize="20" TextTrimming="WordEllipsis"
                            Margin="40,20"/>
                 <!-- UNIVERSE / STATUS / TEAM -->
