--- a/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
@@ -16,32 +16,40 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
         <!--Ligne 1-->
-            <Button Grid.Column="0" Grid.Row="0"
+        <Button Grid.Column="0" Grid.Row="0"
                 Background="{x:Null}" BorderThickness="0"
                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
                 Command='{Binding ReturnBackCommand}'
                  Style="{StaticResource OtherButton}">
-                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
+            <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png" Opacity="0.7"
                    Stretch="Uniform">
-                </Image>
-            </Button>
+            </Image>
+        </Button>
 
-            <TextBlock 
+
+        <ComboBox  Grid.Column="1" ItemsSource="{Binding MediaList}" SelectedItem="{Binding SelectedMedia,Mode=TwoWay}"
+                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="30" 
+                      IsReadOnly="True" Focusable="False" IsEditable="True"
+                      Text="SELECT HERO/MOVIE" FontWeight="Bold" FontSize="15"/>
+
+        <TextBlock 
                 Foreground="White" FontWeight="Bold" FontStyle="Italic" TextAlignment="Center"  
                 Grid.Column="2" Grid.Row="0" FontSize="40"
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
                 Text="ADD OR DELETE DATA"/>
+    
 
-                <ComboBox  Grid.Column="1" ItemsSource="{Binding MediaList}" SelectedItem="{Binding SelectedMedia,Mode=TwoWay}"
-                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="30" 
-                      IsReadOnly="True" Focusable="False" IsEditable="True"
-                      Text="SELECT HERO/MOVIE" FontWeight="Bold" FontSize="15"/>
+        <Button  Grid.Row="0" Grid.Column="4" Content="SAVE" Foreground="White" 
+                        FontWeight="Bold" Background="#FFEEAD00" Margin="20"
+                        Style="{StaticResource ButtonHome}"
+                        Command="{Binding SaveCommand}"/>
         <!--Ligne 2-->
         
-        <ContentControl Grid.Row="1" Grid.ColumnSpan="3" Content="{Binding CurrentVM}" />
+        <ContentControl Grid.Row="1" Grid.ColumnSpan="4" Content="{Binding CurrentVM}" />
         
     </Grid>
 </UserControl>
