--- a/src/MarvelFlow/MarvelFlow.App/Views/UcSerie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcSerie.xaml
@@ -24,7 +24,7 @@
                 Background="{x:Null}" BorderThickness="0"
                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
                 Command='{Binding ReturnBackCommand}' >
-                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
+                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png" Opacity="0.7"
                    Stretch="Uniform">
                 </Image>
             </Button>
