--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -28,7 +28,7 @@
                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
                     Style="{StaticResource OtherButton}"
                 Command='{Binding ReturnBackCommand}' >
-                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png" Opacity="0.7"
+                <Image Source="pack://application:,,,/MarvelFlow.App;component/Component/Images/row.png" Opacity="0.7"
                    Stretch="Uniform">
                 </Image>
             </Button>
